--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -1,57 +1,21 @@
-% Encoding: UTF-8
+﻿% Encoding: UTF-8
 
-@Article{Simmons2012,
-  author  = {Simmons, J. P. and Nelson, L. D. and Simonsohn, U. A.},
-  journal = {SSRN Electronic Journal},
-  title   = {A 21 word solution},
-  year    = {2012},
-  doi     = {10.2139/ssrn.2160588},
-}
-
-@Article{Wessa2010,
-  author  = {Wessa, M. and Kanske, P. and Neumeister, P. and Bode, K. and Heissler, J. and Schönfelder, S.},
-  journal = {Zeitschrift für Klinische Psychologie und Psychotherapie},
-  title   = {EmoPicS: Subjective und psychophysiologische Evalueation neuen Bildmaterials für die klinisch-biopsychologische Forschung},
-  year    = {2010},
-  number  = {Suppl 1/11},
-  pages   = {77},
-  volume  = {39},
-}
-
-@Book{Lang2008,
-  author    = {Lang, P. J. and Bradley, M. M. and Cuthbert, B. N.},
-  publisher = {University of Florida},
-  title     = {International affective picture system (IAPS): Affective ratings of pictures and instruction manual},
-  year      = {2008},
-}
-
-@Misc{RStudioTeam2020,
-  author    = {{RStudio Team}},
-  note      = {Programmers: \_:n3594},
-  title     = {{RStudio}: {Integrated} development for {R}},
-  year      = {2020},
-  address   = {Boston, MA},
-  publisher = {RStudio, PBC},
-  url       = {http://www.rstudio.com},
-}
-
-@Article{Harris2019,
-  author     = {Harris, Paul A. and Taylor, Robert and Minor, Brenda L. and Elliott, Veida and Fernandez, Michelle and O'Neal, Lindsay and McLeod, Laura and Delacqua, Giovanni and Delacqua, Francesco and Kirby, Jacqueline and Duda, Stephany N.},
-  journal    = {Journal of Biomedical Informatics},
-  title      = {The {REDCap} consortium: {Building} an international community of software platform partners},
-  year       = {2019},
-  issn       = {1532-0464},
+@Article{Greiner2015,
+  author     = {Greiner, Ben},
+  journal    = {Journal of the Economic Science Association},
+  title      = {Subject pool recruitment procedures: {Organizing} experiments with {ORSEE}},
+  year       = {2015},
+  issn       = {2199-6784},
   month      = jul,
-  pages      = {103208},
-  volume     = {95},
-  abstract   = {The Research Electronic Data Capture (REDCap) data management platform was developed in 2004 to address an institutional need at Vanderbilt University, then shared with a limited number of adopting sites beginning in 2006. Given bi-directional benefit in early sharing experiments, we created a broader consortium sharing and support model for any academic, non-profit, or government partner wishing to adopt the software. Our sharing framework and consortium-based support model have evolved over time along with the size of the consortium (currently more than 3200 REDCap partners across 128 countries). While the “REDCap Consortium” model represents only one example of how to build and disseminate a software platform, lessons learned from our approach may assist other research institutions seeking to build and disseminate innovative technologies.},
-  doi        = {10.1016/j.jbi.2019.103208},
-  file       = {:Harris2019 - The REDCap Consortium_ Building an International Community of Software Platform Partners.pdf:PDF},
-  keywords   = {Medical informatics, Electronic data capture, Clinical research, Translational research},
+  note       = {Number: 1},
+  number     = {1},
+  pages      = {114--125},
+  volume     = {1},
+  abstract   = {This paper discusses aspects of recruiting subjects for economic laboratory experiments, and shows how the Online Recruitment System for Economic Experiments can help. The software package provides experimenters with a free, convenient, and very powerful tool to organize their experiments and sessions.},
+  doi        = {10.1007/s40881-015-0004-4},
   language   = {en},
-  shorttitle = {The {REDCap} consortium},
-  url        = {https://www.sciencedirect.com/science/article/pii/S1532046419301261},
-  urldate    = {2021-08-24},
+  shorttitle = {Subject pool recruitment procedures},
+  urldate    = {2020-06-05},
 }
 
 @Article{Harris2009,
@@ -73,6 +37,42 @@
   urldate  = {2021-08-24},
 }
 
+@Article{Harris2019,
+  author     = {Harris, Paul A. and Taylor, Robert and Minor, Brenda L. and Elliott, Veida and Fernandez, Michelle and O'Neal, Lindsay and McLeod, Laura and Delacqua, Giovanni and Delacqua, Francesco and Kirby, Jacqueline and Duda, Stephany N.},
+  journal    = {Journal of Biomedical Informatics},
+  title      = {The {REDCap} consortium: {Building} an international community of software platform partners},
+  year       = {2019},
+  issn       = {1532-0464},
+  month      = jul,
+  pages      = {103208},
+  volume     = {95},
+  abstract   = {The Research Electronic Data Capture (REDCap) data management platform was developed in 2004 to address an institutional need at Vanderbilt University, then shared with a limited number of adopting sites beginning in 2006. Given bi-directional benefit in early sharing experiments, we created a broader consortium sharing and support model for any academic, non-profit, or government partner wishing to adopt the software. Our sharing framework and consortium-based support model have evolved over time along with the size of the consortium (currently more than 3200 REDCap partners across 128 countries). While the “REDCap Consortium” model represents only one example of how to build and disseminate a software platform, lessons learned from our approach may assist other research institutions seeking to build and disseminate innovative technologies.},
+  doi        = {10.1016/j.jbi.2019.103208},
+  file       = {:Harris2019 - The REDCap Consortium_ Building an International Community of Software Platform Partners.pdf:PDF},
+  keywords   = {Medical informatics, Electronic data capture, Clinical research, Translational research},
+  language   = {en},
+  shorttitle = {The {REDCap} consortium},
+  url        = {https://www.sciencedirect.com/science/article/pii/S1532046419301261},
+  urldate    = {2021-08-24},
+}
+
+@Book{Lang2008,
+  author    = {Lang, P. J. and Bradley, M. M. and Cuthbert, B. N.},
+  publisher = {University of Florida},
+  title     = {International affective picture system (IAPS): Affective ratings of pictures and instruction manual},
+  year      = {2008},
+}
+
+@Misc{RStudioTeam2020,
+  author    = {{RStudio Team}},
+  note      = {Programmers: \_:n3594},
+  title     = {{RStudio}: {Integrated} development for {R}},
+  year      = {2020},
+  address   = {Boston, MA},
+  publisher = {RStudio, PBC},
+  url       = {http://www.rstudio.com},
+}
+
 @Article{Scheffel2021,
    author = {Scheffel, C. and Graupner, S. T. and Gartner, A. and Zerna, J. and Strobel, A. and Dorfel, D.},
    title = {Effort beats effectiveness in emotion regulation choice: Differences between suppression and distancing in subjective and physiological measures},
@@ -86,22 +86,43 @@
    year = {2021},
 }
 
-@Article{Greiner2015,
-  author     = {Greiner, Ben},
-  journal    = {Journal of the Economic Science Association},
-  title      = {Subject pool recruitment procedures: {Organizing} experiments with {ORSEE}},
-  year       = {2015},
-  issn       = {2199-6784},
+@Article{Simmons2012,
+  author  = {Simmons, J. P. and Nelson, L. D. and Simonsohn, U. A.},
+  journal = {SSRN Electronic Journal},
+  title   = {A 21 word solution},
+  year    = {2012},
+  doi     = {10.2139/ssrn.2160588},
+}
+
+@Article{Wessa2010,
+  author  = {Wessa, M. and Kanske, P. and Neumeister, P. and Bode, K. and Heissler, J. and Schönfelder, S.},
+  journal = {Zeitschrift für Klinische Psychologie und Psychotherapie},
+  title   = {EmoPicS: Subjective und psychophysiologische Evalueation neuen Bildmaterials für die klinisch-biopsychologische Forschung},
+  year    = {2010},
+  number  = {Suppl 1/11},
+  pages   = {77},
+  volume  = {39},
+}
+
+@Article{Westbrook2013,
+  author     = {Westbrook, Andrew and Kester, Daria and Braver, Todd S.},
+  journal    = {PLOS ONE},
+  title      = {What is the subjective cost of cognitive effort? {Load}, trait, and aging effects revealed by economic preference},
+  year       = {2013},
+  issn       = {1932-6203},
   month      = jul,
-  note       = {Number: 1},
-  number     = {1},
-  pages      = {114--125},
-  volume     = {1},
-  abstract   = {This paper discusses aspects of recruiting subjects for economic laboratory experiments, and shows how the Online Recruitment System for Economic Experiments can help. The software package provides experimenters with a free, convenient, and very powerful tool to organize their experiments and sessions.},
-  doi        = {10.1007/s40881-015-0004-4},
+  note       = {Publisher: Public Library of Science},
+  number     = {7},
+  pages      = {e68210},
+  volume     = {8},
+  abstract   = {It has long been assumed that people treat cognitive effort as costly, but also that such effort costs may vary greatly across individuals. Individual differences in subjective effort could present a major and pervasive confound in behavioral and neuroscience assessments, by conflating cognitive ability with cognitive motivation. Self-report cognitive effort scales have been developed, but objective measures are lacking. In this study, we use the behavioral economic approach of revealed preferences to quantify subjective effort. Specifically, we adapted a well-established discounting paradigm to measure the extent to which cognitive effort causes participants to discount monetary rewards. The resulting metrics are sensitive to both within-individual factors, including objective load and reward amount, and between-individual factors, including age and trait cognitive engagement. We further validate cognitive effort discounting by benchmarking it against well-established measures of delay discounting. The results highlight the promise and utility of behavioral economic tools for assessing trait and state influences on cognitive motivation.},
+  doi        = {10.1371/journal.pone.0068210},
+  file       = {Full Text PDF:C\:/Users/josep/Zotero/storage/ZA8ULIEI/westbrook_what_2013 - What Is the Subjective Cost of Cognitive Effort_ Load, Trait, and Aging Effects Revealed by Economic Preference.pdf:application/pdf;Snapshot:C\:/Users/josep/Zotero/storage/CY38ULMT/westbrook_what_2013 - What Is the Subjective Cost of Cognitive Effort_ Load, Trait, and Aging Effects Revealed by Economic Preference.html:text/html},
+  keywords   = {Motivation, Behavior, Decision making, Cognitive psychology, Measurement, Behavioral economics, Elderly, Payment},
   language   = {en},
-  shorttitle = {Subject pool recruitment procedures},
-  urldate    = {2020-06-05},
+  shorttitle = {What {Is} the {Subjective} {Cost} of {Cognitive} {Effort}?},
+  url        = {https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0068210},
+  urldate    = {2021-06-29},
 }
 
 @Book{Yu2010,
