--- a/06_Paper/ER-ED/intro.Rmd
+++ b/06_Paper/ER-ED/intro.Rmd
@@ -11,3 +11,5 @@ Individual subjective values of cognitive effort have been quantified using the 
 
 ## Adapting an effort discounting paradigm
 
+In the original study by Westbrook et al. [-@Westbrook2013], cognitive load was varied using the *N*-back task. 
+Participants had to decide whether repeating a higher *N*-back level for larger, fixed monetary reward, or a lower level for a smaller, variing reward.  
