--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -110,7 +110,8 @@ A complete list of all pictures and their classification into sets can be found 
 
 ## 2.6 Psychometric measures
 
-[...]
+Two days after the T2 ER session, participants receive an email containing the link to the online survey. 
+This survey contains a variety of questionnaires.
 
 ## 2.7 Statistics 
 
