--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -1,5 +1,19 @@
 ﻿% Encoding: UTF-8
 
+@article{Abler2009,
+   author = {Abler, B. and Kessler, H.},
+   title = {Emotion Regulation Questionnaire - A German version of the ERQ by Gross and John},
+   journal = {Diagnostica},
+   volume = {55},
+   number = {3},
+   pages = {144-152},
+   ISSN = {0012-1924},
+   DOI = {10.1026/0012-1924.55.3.144},
+   url = {<Go to ISI>://WOS:000268216400002},
+   year = {2009},
+   type = {Journal Article}
+}
+
 @Article{Greiner2015,
   author     = {Greiner, Ben},
   journal    = {Journal of the Economic Science Association},
@@ -16,6 +30,21 @@
   language   = {en},
   shorttitle = {Subject pool recruitment procedures},
   urldate    = {2020-06-05},
+}
+
+@article{GrossJohn2003,
+   author = {Gross, J. J. and John, O. P.},
+   title = {Individual differences in two emotion regulation processes: implications for affect, relationships, and well-being},
+   journal = {Journal of Personality and Social Psychology},
+   volume = {85},
+   number = {2},
+   pages = {348-62},
+   ISSN = {0022-3514 (Print)
+0022-3514 (Linking)},
+   DOI = {10.1037/0022-3514.85.2.348},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/12916575},
+   year = {2003},
+   type = {Journal Article}
 }
 
 @Article{Harris2009,
