--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -14,6 +14,34 @@
    type = {Journal Article}
 }
 
+@Article{Bech2004,
+   author = {Bech, P.},
+   title = {Measuring the dimensions of psychological general well-being by the WHO-5},
+   journal = {Quality of life newsletter},
+   volume = {32},
+   pages = {15--16},
+   year = {2004},
+}
+
+@article{Braehler2007,
+  title={Teststatistische pr{\"u}fung und normierung der deutschen versionen des EUROHIS-QOL lebensqualit{\"a}t-Index und des WHO-5 wohlbefindens-index},
+  author={Br{\"a}hler, Elmar and M{\"u}hlan, Holger and Albani, Cornelia and Schmidt, Silke},
+  journal={Diagnostica},
+  volume={53},
+  number={2},
+  pages={83--96},
+  year={2007},
+  publisher={Hogrefe Verlag G{\"o}ttingen}
+}
+
+@article{Doerfel2019,
+   author = {Dörfel, D. and Gärtner, A. and Strobel, A.},
+   title = {A new self-report instrument for measuring emotion regulation flexibility.},
+   journal = {Society for Affective Science (SAS) Annual Conference},
+   year = {2019},
+   type = {Journal Article}
+}
+
 @Article{Greiner2015,
   author     = {Greiner, Ben},
   journal    = {Journal of the Economic Science Association},
