--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -82,8 +82,6 @@ The order of the comparisons was randomized.
 Because there is no strategy that is objectively more difficult, all comparisons began with 
 Participants were instructed to decide as realistically as possible, imaging the displayed money would really be up for election.
 
-
-
 _Part three: ER choice._ <br>
 After the discounting part, participants chose which of the three ER strategies (distraction, distancing or suppression) they wanted to reapply.
 Importantly, there were no further instruction, on what basis they should make their decision.
@@ -111,10 +109,11 @@ A complete list of all pictures and their classification into sets can be found 
 ## 2.6 Psychometric measures
 
 Two days after the T2 ER session, participants receive an email containing the link to the online survey. 
-This survey contains a number of questionnaires.
+This survey contained a number of questionnaires:
 General psychological well-being was assessed using the WHO-5 scale [@Bech2004; German version: @Braehler2007].
 Dispositional use of ER was assessed using the Emotion Regulation Questionnaire (ERQ) [@GrossJohn2003;German version: @Abler2009].
-For the assessment of ER ability we used the Flexible Emotion Regulation Scale (FlexER) [@Doerfel2019]. 
+For the assessment of ER ability we used the Flexible Emotion Regulation Scale (FlexER) [@Doerfel2019].
+To assess need for cognition, the short form of the Need for Cognition Scale [@Cacioppo1982; German version: @Bless1994] was used.
 
 
 ## 2.7 Statistics 
