--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -14,6 +14,20 @@
    type = {Journal Article}
 }
 
+@article{Bernecker2017,
+   author = {Bernecker, K. and Job, V.},
+   title = {Implicit Theories About Willpower in Resisting Temptations and Emotion Control},
+   journal = {Zeitschrift Fur Psychologie-Journal of Psychology},
+   volume = {225},
+   number = {2},
+   pages = {157-166},
+   ISSN = {2190-8370},
+   DOI = {10.1027/2151-2604/a000292},
+   url = {<Go to ISI>://WOS:000408058200008},
+   year = {2017},
+   type = {Journal Article}
+}
+
 @Article{Bech2004,
    author = {Bech, P.},
    title = {Measuring the dimensions of psychological general well-being by the WHO-5},
@@ -24,13 +38,14 @@
 }
 
 @article{Braehler2007,
-  title={Teststatistische pr{\"u}fung und normierung der deutschen versionen des EUROHIS-QOL lebensqualit{\"a}t-Index und des WHO-5 wohlbefindens-index},
-  author={Br{\"a}hler, Elmar and M{\"u}hlan, Holger and Albani, Cornelia and Schmidt, Silke},
-  journal={Diagnostica},
-  volume={53},
-  number={2},
-  pages={83--96},
-  year={2007},
+  title = {Teststatistische pr{\"u}fung und normierung der deutschen versionen des EUROHIS-QOL lebensqualit{\"a}t-Index und des WHO-5 wohlbefindens-index},
+  author = {Br{\"a}hler, Elmar and M{\"u}hlan, Holger and Albani, Cornelia and Schmidt, Silke},
+  journal = {Diagnostica},
+  volume = {53},
+  number = {2},
+  pages = {83--96},
+  year = {2007},
+  DOI = {10.1026/0012-1924.53.2.83},
   publisher={Hogrefe Verlag G{\"o}ttingen}
 }
 
