--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -49,6 +49,18 @@
   publisher={Hogrefe Verlag G{\"o}ttingen}
 }
 
+@article{Derryberry2002,
+  title = {Anxiety-related attentional biases and their regulation by attentional control.},
+  author = {Derryberry, Douglas and Reed, Marjorie A},
+  journal = {Journal of abnormal psychology},
+  volume = {111},
+  number = {2},
+  pages = {225--236},
+  year = {200210.1037//0021-843X.111.2.225},
+  DOI = {},
+  publisher = {American Psychological Association}
+}
+
 @article{Doerfel2019,
    author = {Dörfel, D. and Gärtner, A. and Strobel, A.},
    title = {A new self-report instrument for measuring emotion regulation flexibility.},
@@ -128,11 +140,58 @@
   urldate    = {2021-08-24},
 }
 
+@article{Hartmann2011,
+   author = {Hartmann, A. S. and Rief, W. and Hilbert, A.},
+   title = {Psychometric properties of the German version of the Barratt Impulsiveness Scale, Version 11 (BIS-11) for adolescents},
+   journal = {Perceptual and Motor Skills},
+   volume = {112},
+   number = {2},
+   pages = {353-368},
+   ISSN = {0031-5125 (Print)
+0031-5125 (Linking)},
+   DOI = {10.2466/08.09.10.PMS.112.2.353-368},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/21667747
+https://journals.sagepub.com/doi/pdf/10.2466/08.09.10.PMS.112.2.353-368},
+   year = {2011},
+   type = {Journal Article}
+}
+
 @Book{Lang2008,
   author    = {Lang, P. J. and Bradley, M. M. and Cuthbert, B. N.},
   publisher = {University of Florida},
   title     = {International affective picture system (IAPS): Affective ratings of pictures and instruction manual},
   year      = {2008},
+}
+
+@article{Paschke2016,
+   author = {Paschke, L. M. and Dorfel, D. and Steimke, R. and Trempler, I. and Magrabi, A. and Ludwig, V. U. and Schubert, T. and Stelzel, C. and Walter, H.},
+   title = {Individual differences in self-reported self-control predict successful emotion regulation},
+   journal = {Social Cognitive and Affective Neuroscience},
+   volume = {11},
+   number = {8},
+   pages = {1193-204},
+   ISSN = {1749-5024 (Electronic)
+1749-5016 (Linking)},
+   DOI = {10.1093/scan/nsw036},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/27013102},
+   year = {2016},
+   type = {Journal Article}
+}
+
+@article{Patton1995,
+   author = {Patton, J. H. and Stanford, M. S. and Barratt, E. S.},
+   title = {Factor structure of the Barratt impulsiveness scale},
+   journal = {Journal of Clinical Psychology},
+   volume = {51},
+   number = {6},
+   pages = {768-774},
+   ISSN = {0021-9762 (Print)
+0021-9762 (Linking)},
+   DOI = {10.1002/1097-4679(199511)51:6<768::aid-jclp2270510607>3.0.co;2-1},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/8778124
+https://onlinelibrary.wiley.com/doi/pdfdirect/10.1002/1097-4679%28199511%2951%3A6%3C768%3A%3AAID-JCLP2270510607%3E3.0.CO%3B2-1?download=true},
+   year = {1995},
+   type = {Journal Article}
 }
 
 @Misc{RStudioTeam2020,
@@ -158,12 +217,49 @@
    year = {2021},
 }
 
+@Misc{Schwarzer1999
+   author = {Schwarzer, R. and Diehl, M. and Schmitz, G. S.},
+   title = {Self-Regulation Scale},
+   year = {1999},
+   url = {http://userpage.fu-berlin.de/~health/selfreg_g.htm},
+}
+
 @Article{Simmons2012,
   author  = {Simmons, J. P. and Nelson, L. D. and Simonsohn, U. A.},
   journal = {SSRN Electronic Journal},
   title   = {A 21 word solution},
   year    = {2012},
   doi     = {10.2139/ssrn.2160588},
+}
+
+@article{Sproesser2011,
+   author = {Sproesser, G. and Strohbach, S. and Schupp, H. and Renner, B.},
+   title = {Candy or apple? How self-control resources and motives impact dietary healthiness in women},
+   journal = {Appetite},
+   volume = {56},
+   number = {3},
+   pages = {784-787},
+   ISSN = {0195-6663},
+   DOI = {10.1016/j.appet.2011.01.028},
+   url = {<Go to ISI>://WOS:000291912700035},
+   year = {2011},
+   type = {Journal Article}
+}
+
+@article{Tangney2004,
+   author = {Tangney, J. P. and Baumeister, R. F. and Boone, A. L.},
+   title = {High self-control predicts good adjustment, less pathology, better grades, and interpersonal success},
+   journal = {Journal of Personality},
+   volume = {72},
+   number = {2},
+   pages = {271-324},
+   ISSN = {0022-3506 (Print)
+0022-3506 (Linking)},
+   DOI = {10.1111/j.0022-3506.2004.00263.x},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/15016066
+https://onlinelibrary.wiley.com/doi/pdfdirect/10.1111/j.0022-3506.2004.00263.x?download=true},
+   year = {2004},
+   type = {Journal Article}
 }
 
 @Article{Wessa2010,
