--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -11,7 +11,6 @@
    DOI = {10.1026/0012-1924.55.3.144},
    url = {<Go to ISI>://WOS:000268216400002},
    year = {2009},
-   type = {Journal Article}
 }
 
 @article{Bernecker2017,
@@ -25,7 +24,6 @@
    DOI = {10.1027/2151-2604/a000292},
    url = {<Go to ISI>://WOS:000408058200008},
    year = {2017},
-   type = {Journal Article}
 }
 
 @Article{Bech2004,
@@ -49,6 +47,36 @@
   publisher={Hogrefe Verlag G{\"o}ttingen}
 }
 
+@article{Campbell-Sills2007,
+   author = {Campbell-Sills, L. and Stein, M. B.},
+   title = {Psychometric analysis and refinement of the Connor-davidson Resilience Scale (CD-RISC): Validation of a 10-item measure of resilience},
+   journal = {Journal of Traumatic Stress},
+   volume = {20},
+   number = {6},
+   pages = {1019-28},
+   ISSN = {0894-9867 (Print)
+0894-9867 (Linking)},
+   DOI = {10.1002/jts.20271},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/18157881
+https://onlinelibrary.wiley.com/doi/pdfdirect/10.1002/jts.20271?download=true},
+   year = {2007},
+}
+
+@article{Connor2003,
+   author = {Connor, K. M. and Davidson, J. R.},
+   title = {Development of a new resilience scale: the Connor-Davidson Resilience Scale (CD-RISC)},
+   journal = {Depression and Anxiety},
+   volume = {18},
+   number = {2},
+   pages = {76-82},
+   ISSN = {1091-4269 (Print)
+1091-4269 (Linking)},
+   DOI = {10.1002/da.10113},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/12964174
+https://onlinelibrary.wiley.com/doi/pdfdirect/10.1002/da.10113?download=true},
+   year = {2003},
+}
+
 @article{Derryberry2002,
   title = {Anxiety-related attentional biases and their regulation by attentional control.},
   author = {Derryberry, Douglas and Reed, Marjorie A},
@@ -66,7 +94,6 @@
    title = {A new self-report instrument for measuring emotion regulation flexibility.},
    journal = {Society for Affective Science (SAS) Annual Conference},
    year = {2019},
-   type = {Journal Article}
 }
 
 @Article{Greiner2015,
@@ -99,7 +126,6 @@
    DOI = {10.1037/0022-3514.85.2.348},
    url = {https://www.ncbi.nlm.nih.gov/pubmed/12916575},
    year = {2003},
-   type = {Journal Article}
 }
 
 @Article{Harris2009,
@@ -153,7 +179,6 @@
    url = {https://www.ncbi.nlm.nih.gov/pubmed/21667747
 https://journals.sagepub.com/doi/pdf/10.2466/08.09.10.PMS.112.2.353-368},
    year = {2011},
-   type = {Journal Article}
 }
 
 @Book{Lang2008,
@@ -175,7 +200,6 @@ https://journals.sagepub.com/doi/pdf/10.2466/08.09.10.PMS.112.2.353-368},
    DOI = {10.1093/scan/nsw036},
    url = {https://www.ncbi.nlm.nih.gov/pubmed/27013102},
    year = {2016},
-   type = {Journal Article}
 }
 
 @article{Patton1995,
@@ -191,7 +215,6 @@ https://journals.sagepub.com/doi/pdf/10.2466/08.09.10.PMS.112.2.353-368},
    url = {https://www.ncbi.nlm.nih.gov/pubmed/8778124
 https://onlinelibrary.wiley.com/doi/pdfdirect/10.1002/1097-4679%28199511%2951%3A6%3C768%3A%3AAID-JCLP2270510607%3E3.0.CO%3B2-1?download=true},
    year = {1995},
-   type = {Journal Article}
 }
 
 @Misc{RStudioTeam2020,
@@ -202,6 +225,19 @@ https://onlinelibrary.wiley.com/doi/pdfdirect/10.1002/1097-4679%28199511%2951%3A
   address   = {Boston, MA},
   publisher = {RStudio, PBC},
   url       = {http://www.rstudio.com},
+}
+
+@article{Sarubin2015,
+   author = {Sarubin, N. and Gutt, D. and Giegling, I. and Buhner, M. and Hilbert, S. and Krahenmann, O. and Wolf, M. and Jobst, A. and Sabass, L. and Rujescu, D. and Falkai, P. and Padberg, F.},
+   title = {First Analysis of the 10-and 25-Item German Version of the Connor-Davidson Resilience Scale (CD-RISC) Regarding Psychometric Properties and Components},
+   journal = {Zeitschrift Fur Gesundheitspsychologie},
+   volume = {23},
+   number = {3},
+   pages = {112-122},
+   ISSN = {0943-8149},
+   DOI = {10.1026/0943-8149/a000142},
+   url = {<Go to ISI>://WOS:000364529900002},
+   year = {2015},
 }
 
 @Article{Scheffel2021,
@@ -217,7 +253,7 @@ https://onlinelibrary.wiley.com/doi/pdfdirect/10.1002/1097-4679%28199511%2951%3A
    year = {2021},
 }
 
-@Misc{Schwarzer1999
+@Misc{Schwarzer1999,
    author = {Schwarzer, R. and Diehl, M. and Schmitz, G. S.},
    title = {Self-Regulation Scale},
    year = {1999},
@@ -243,7 +279,6 @@ https://onlinelibrary.wiley.com/doi/pdfdirect/10.1002/1097-4679%28199511%2951%3A
    DOI = {10.1016/j.appet.2011.01.028},
    url = {<Go to ISI>://WOS:000291912700035},
    year = {2011},
-   type = {Journal Article}
 }
 
 @article{Tangney2004,
@@ -259,7 +294,6 @@ https://onlinelibrary.wiley.com/doi/pdfdirect/10.1002/1097-4679%28199511%2951%3A
    url = {https://www.ncbi.nlm.nih.gov/pubmed/15016066
 https://onlinelibrary.wiley.com/doi/pdfdirect/10.1111/j.0022-3506.2004.00263.x?download=true},
    year = {2004},
-   type = {Journal Article}
 }
 
 @Article{Wessa2010,
