--- a/06_Paper/ER-ED/intro.Rmd
+++ b/06_Paper/ER-ED/intro.Rmd
@@ -9,7 +9,7 @@ output: html_document
 [...]
 Individual subjective values (SV) of cognitive effort have been quantified using the cognitive effort discounting paradigm (COG-ED) [@Westbrook2013]. 
 
-## Adapting an effort discounting paradigm
+## 1.1 Adapting an effort discounting paradigm
 
 In the original study by Westbrook et al. [-@Westbrook2013], cognitive load was varied using the *N*-back task. 
 Participants had to decide whether repeating a higher *N*-back level for larger, fixed monetary reward, or a lower level for a smaller, varying reward. 
