--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -76,8 +76,8 @@ In the second part, ER effort discounting took place.
 The procedure of the discounting followed the COG-ED paradigm by Westbrook et al. [-@Westbrook2013] with major change.
 We used the following adaption that allowed the computation of SVs for different strategies without presuming that all individuals would inherently evaluate the same strategy as the easiest one: For each possible pairing (distraction vs. distancing, distraction vs. suppression, and distancing vs. suppression), two strategies with monetary values were presented.
 The order of the comparisons was randomized.
-Because there is no strategy that is objectively more difficult, all comparisons began with the option "1 EUR for strategy A or 1 EUR for strategy B".
-
+Because there is no strategy that is objectively more difficult, we added an initial comparison that began with the option "1 EUR for strategy A or 1 EUR for strategy B".
+The 
 Participants were instructed to decide as realistically as possible, imaging the displayed money would really be up for election.
 
 _Part three: ER choice._ <br>
