--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -77,12 +77,17 @@ The procedure of the discounting followed the COG-ED paradigm by Westbrook et al
 We used the following adaption that allowed the computation of SVs for different strategies without presuming that all individuals would inherently evaluate the same strategy as the easiest one: For each possible pairing (distraction vs. distancing, distraction vs. suppression, and distancing vs. suppression), two strategies with monetary values were presented.
 The order of the comparisons was randomized.
 Because there is no strategy that is objectively more difficult, we added an initial comparison that began with the option "1 EUR for strategy A or 1 EUR for strategy B".
-The 
+The strategy that was not chosen was assigned the value 2 EUR.
+From this point on, comparisons between strategies followed the original COG-ED paradigm [@Westbrook2013].
 Participants were instructed to decide as realistically as possible, imaging the displayed money would really be up for election.
 
 _Part three: ER choice._ <br>
 After the discounting part, participants chose which of the three ER strategies (distraction, distancing or suppression) they wanted to reapply.
 Importantly, there were no further instruction, on what basis they should make their decision.
+Participants should make their decision freely, according to the criteria they considered important for themselves.
+However, participants were asked to state the reasons for the decision afterwards.
+As soon as they had decided, they saw the respective instruction. 
+After, the block with another 20 negative pictures started.
 
 ## 2.4 Stimuli
 ```{r stimvalues, echo = FALSE}
