--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -35,6 +35,18 @@
    year = {2004},
 }
 
+@article{Bless1994,
+   author = {Bless, H. and Wanke, M. and Bohner, G. and Fellhauer, R. F. and Schwarz, N.},
+   title = {Need for cognition - a scale measuring engagement and happiness in cognitive tasks},
+   journal = {Zeitschrift Für Sozialpsychologie},
+   volume = {25},
+   number = {2},
+   pages = {147-154},
+   ISSN = {0044-3514},
+   url = {<Go to ISI>://WOS:A1994NR83900004},
+   year = {1994},
+}
+
 @article{Braehler2007,
   title = {Teststatistische pr{\"u}fung und normierung der deutschen versionen des EUROHIS-QOL lebensqualit{\"a}t-Index und des WHO-5 wohlbefindens-index},
   author = {Br{\"a}hler, Elmar and M{\"u}hlan, Holger and Albani, Cornelia and Schmidt, Silke},
@@ -45,6 +57,19 @@
   year = {2007},
   DOI = {10.1026/0012-1924.53.2.83},
   publisher={Hogrefe Verlag G{\"o}ttingen}
+}
+
+@article{Cacioppo1982,
+   author = {Cacioppo, J. T. and Petty, R. E.},
+   title = {The Need for Cognition},
+   journal = {Journal of Personality and Social Psychology},
+   volume = {42},
+   number = {1},
+   pages = {116-131},
+   ISSN = {0022-3514},
+   DOI = {10.1037//0022-3514.42.1.116},
+   url = {<Go to ISI>://WOS:A1982NC43700010},
+   year = {1982},
 }
 
 @article{Campbell-Sills2007,
