--- a/06_Paper/ER-ED/intro.Rmd
+++ b/06_Paper/ER-ED/intro.Rmd
@@ -23,5 +23,10 @@ The assumption is that participants now choose the option that has the higher SV
 In the next step we return to the original paradigm.
 The higher monetary value (i.e., 2 EUR) is assigned to the option that was not chosen in the first step and therefore is assumed to have the lower SV.
 In the following steps, the lower value is changed in every iteration according to Westbrook et al. [-@Westbrook2013] until the indifference point is reached.
+This procedure will be repeated until all strategies have been compared.
+The SV of each strategy is calculated as the mean of this strategy's SV from all comparisons.
+In case a participant has a clear preference for one strategy, the SV of this strategy will be 1.
+But our paradigm can also account for the case that a person does not have a clear preference.
+Then no SV will be 1, but at least the SVs of all strategies can be interpreted as absolute values and in relation to the other strategy's SVs.
 
 ## Hypotheses
